mobile sidenav and overflow fix

--- a/vca-website/src/index.css
+++ b/vca-website/src/index.css
@@ -3,3 +3,11 @@
 html {
   scroll-behavior: smooth;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  overflow-x: hidden;
+}
